force-app/main/default/objects/Account/fields/Preferred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact__c</fullName>
    <description>How the family prefers to be contacted.</description>
    <label>Preferred Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Phone call</fullName><default>false</default><label>Phone call</label></value>
            <value><fullName>Text message</fullName><default>false</default><label>Text message</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Instagram</fullName><default>false</default><label>Instagram</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>