force-app/main/default/objects/Account/fields/Profile_Updated__c.field-meta.xml
<CustomField>
    <fullName>Profile_Updated__c</fullName>
    <description>Last time staff confirmed the family profile.</description>
    <label>Profile Updated</label>
    <type>Date</type>
</CustomField>