force-app/main/default/objects/Account/fields/School_Daycare__c.field-meta.xml
<CustomField>
    <fullName>School_Daycare__c</fullName>
    <description>School or daycare the family mentioned; useful for group bookings.</description>
    <label>School or Daycare</label>
    <length>120</length>
    <type>Text</type>
</CustomField>