force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Computed by CommunityOS from profile and history, e.g. Party family · Camp family.</description>
    <label>Segment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>