force-app/main/default/objects/Account/fields/Visit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequency__c</fullName>
    <description>How often the family says they visit.</description>
    <label>Visit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>First time</fullName><default>false</default><label>First time</label></value>
            <value><fullName>Occasional</fullName><default>false</default><label>Occasional</label></value>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>Weekly</fullName><default>false</default><label>Weekly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>