force-app/main/default/objects/Account/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <description>A family unit: guardians (Contact) and children (Minor__c) share one Household Account.</description>
    <label>Household</label>
</RecordType>